# gos

./: Cargo.toml  LICENSE  README.md
.github/workflows/: sync.yml
src/: ast.rs  compiler.rs  decompiler.rs  error.rs  format.rs  gos.pest  lib.rs  parser.rs
src/tests/: README.md  decompiler_tests.rs  error_tests.rs  integration_tests.rs  mod.rs  parser_tests.rs
